--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -8,11 +8,10 @@
     width: 360px;
 }
 
-.image{
-    width: 700px;
-    background-repeat: no-repeat;
-    margin-top: 100px;
-    margin-left: 70px;
+/* .image1{
+    width: 30px;
+    margin-top: 80px;
+    margin-left: 80px;
     justify-content: center;
     justify-items: center;
-}
+} */
