--- a/src/SuperAdmin/components/widget/widget.scss
+++ b/src/SuperAdmin/components/widget/widget.scss
@@ -7,7 +7,7 @@
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   border-radius: 10px;
   height: 100px;
-  background-color: orange;
+  background-color: rgb(255, 177, 33);
 
   .left,
   .right {
