--- a/src/admin/pages/new/new.scss
+++ b/src/admin/pages/new/new.scss
@@ -40,8 +40,9 @@
           gap: 12px;
           align-items: center;
 
-          .formInput {
+          .formInputs {
             width: 40%;
+             
 
             .label-form {
               display: flex;
@@ -70,7 +71,7 @@
             color: white;
             font-weight: bold;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 40px;
           }
         }
       
