--- a/src/SuperAdmin/pages/new/new.scss
+++ b/src/SuperAdmin/pages/new/new.scss
@@ -40,7 +40,7 @@
           gap: 12px;
           align-items: center;
 
-          .formInput {
+          .formInputs {
             width: 40%;
 
             label {
@@ -79,7 +79,7 @@
             color: white;
             font-weight: bold;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 30px;
           }
         }
       
