--- a/src/SuperAdmin/pages/AssignDevices/assign.scss
+++ b/src/SuperAdmin/pages/AssignDevices/assign.scss
@@ -1,107 +1,111 @@
 .new {
-  width: 100%;
-  display: flex;
-
-  .newContainer {
-    flex: 6;
-    
-
-    .top-new,
-    .bottom {
-      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-      padding: 10px;
-      margin: 20px;
-      display: flex;
+    width: 100%;
+    display: flex;
+  
+    .newContainer {
+      flex: 6;
       
-
-      .heading-top {
-        color: lightgray;
-        font-size: 20px;
-        margin-top: 15px;
+  
+      .top-new,
+      .bottom {
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        padding: 10px;
+        margin: 20px;
+        display: flex;
+        
+  
+        .heading-top {
+          color: lightgray;
+          font-size: 20px;
+          margin-top: 15px;
+        }
+       
       }
-     
     }
   }
-}
 .head{
-  float: center;
-  margin-left:400px;
-  margin-top: -10px;
+    float: center;
+    margin-left:400px;
+    margin-top: -10px;
 }
-.devices{
-  float: center;
-  margin-left:120px;
-}
-.check{
-  padding-right: 300px;
-}
-.input{
-  float: center;
-  margin-left:40px;
-  margin: auto;
-  align-items: center;
-  width: 30%;
- 
-}
-input[type="checkbox"] {  
-  transition: box-shadow .3s;
-  background: lightgrey;
-  height: 20px;
-  width: 20px;
-  margin-top: 20px;
-
-  &:checked { 
-    box-shadow: inset 0 0 0 20px orange;
+  .devices{
+    float: center;
+    margin-left:120px;
   }
-}
-label{
-  font-weight: bolder;
-  margin-right: 30px;
-}
-.assign{
-  margin-top: 30px;
-  margin-left:50px;
-  width:90px;
-  height: 45px;
-  border-radius: 3px;
-}
-.main{
-  margin: auto;
-  align-items: center;
-  width: 30%;
-  
-}
+  .check{
+    padding-right: 300px;
+  }
+  .input{
+    float: center;
+    margin-left:40px;
+    margin: auto;
+    align-items: center;
+    width: 30%;
+   
+  }
+  input[type="checkbox"] {  
+    transition: box-shadow .3s;
+    background: lightgrey;
+    height: 15px;
+    width: 15px;
+    margin-top: 20px;
 
-.items{
-  margin-top: 20px;
-  
+    &:checked { 
+      box-shadow: inset 0 0 0 20px orange;
+    }
+  }
+  label{
+    font-weight: bolder;
+    margin-right: 30px;
+  }
+  .assigned{
+    margin-top: 30px;
+    margin-left:50px;
+    width:90px;
+    height: 45px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: orange;
+    
+  }
+  .main{
+    margin: auto;
+    align-items: center;
+    width: 30%;
+    
+  }
 
-}
-.title-device {
-  font-size: 22px;
-  margin-bottom: 10px;
-  font-weight: bolder;
-  align-items: center;
-  justify-content: center;
-  margin-left: 110px;
-}
-.list-container {
-  gap: 10px;
-  border: 1px solid rgb(194, 194, 194);
-  width: 300px;
-  padding: 20px;
-  padding-top:5px;
-  overflow-y:scroll;
-  height: 200px;
+  .items{
+    margin-top: 20px;
+    
 
-}
-.checked-item,
-.not-checked-item {
-  margin-left: 10px;
-  
-}
-span{
-  margin-left: 10px;
-  
-}
+  }
+  .title-device {
+    font-size: 22px;
+    margin-bottom: 10px;
+    font-weight: bolder;
+    align-items: center;
+    justify-content: center;
+    margin-left: 110px;
+  }
+  .list-container {
+    gap: 10px;
+    border: 1px solid rgb(194, 194, 194);
+    width: 300px;
+    padding: 20px;
+    padding-top:2px;
+    overflow-y:scroll;
+    height: 180px;
+
+  }
+  .checked-item,
+  .not-checked-item {
+    margin-left: 10px;
+    
+  }
+  span{
+    margin-left: 10px;
+    
+  }
+ 
